# ESP32_BLE_Arduino

./: CMakeLists.txt  README.md  _notes_on_clone.md
lib/arduino-esp32/cores/esp32/: esp32-hal-log.h
src/: BLEAdvertisedDevice.cpp  BLEAdvertising.cpp  BLECharacteristic.cpp  BLEDescriptor.cpp  BLEDevice.cpp  BLEServer.cpp  FreeRTOS.cpp  FreeRTOS.h
